# dotctl

./: Cargo.toml  README.md  test.yaml
roadmap/: book.toml
roadmap/src/: SUMMARY.md
roadmap/src/application/: data-dependencies.md  features.md  purpose.md
roadmap/src/architecture/: artifacts.md  logic.md  models.md
roadmap/src/implementation/: modules.md
roadmap/src/interaction/: cli.md  config.md
src/: appconf.rs  cli.rs  config.rs  hooks.rs  links.rs  main.rs
