[package]
name = "dotctl"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Mendoza <nathancm@uci.edu>"]
description = "A CLI tool for managing dotfile setups and removals"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
resolve-path = "0.1"
symlink = "0.1.0"
shlex = "1.3.0"
serde_yaml = "0.9"
